--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,29 +12,29 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <h3>Content Marketing</h3>
+                    <p class="text-muted">organizations build, test, and optimize content marketing programs to drive qualified leads and sales opportunities. </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <h3>Websites</h3>
+                    <p class="text-muted">Websites should measurably drive leads, sales, and deeper engagement. </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <h3>Marketing</h3>
+                    <p class="text-muted">As a digital marketing agency, we specialize in lead generation, inbound marketing, conversion optimization, and sales nurturing. </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <h3>Lead Generation</h3>
+                    <p class="text-muted">We build vetting and nurturing systems to ensure that our clients can scale up their marketing and sales efforts intelligently.</p>
                 </div>
             </div>
         </div>
