--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,8 @@
   <aside class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Free Download at Start Bootstrap!</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+              <h2>We would love to get in touch to see how we can help!</h2>
+              <a href="https://goo.gl/forms/1jGQbfhwwkRRL40B2" class="btn btn-default btn-xl wow tada">Contact Harper!</a>
           </div>
       </div>
   </aside>
